Fixes layout issues on manage collections page (bug 498082)
git-svn-id: http://svn.mozilla.org/addons/trunk@49549 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/site/app/webroot/css/amo2009/main-mozilla.css
+++ b/site/app/webroot/css/amo2009/main-mozilla.css
@@ -694,7 +694,7 @@ blockquote.publisher-comment p.by {
     border-bottom: solid 1px #C8E8F3;
 }
 #collections-edit .coll-addon blockquote {
-    overflow-x: scroll;
+    margin-right: 50px;
 }
 
 #collections-edit .coll-addon img {
@@ -710,6 +710,7 @@ blockquote.publisher-comment p.by {
 }
 #collections-edit .coll-addon a.removeaddon {
     float: right;
+    clear: right;
 }
 #collections-edit .coll-addon .editbox {
     clear: both;
